<?xml version="1.0"?>
<package format="3">
  <name>fast_lio_localization</name>
  <version>0.1.0</version>

  <description>Pure ROS 2 relocalization package for external FAST-LIO odometry and aligned scans.</description>

  <maintainer email="zgm777777@example.com">zgm777777</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
